k8s/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-app
  namespace: hotel-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel-app
  template:
    metadata:
      labels:
        app: hotel-app
    spec:
      containers:
        - name: hotel-app
          image: atakowiec/laravel-hotel-app:uniwersalna
          imagePullPolicy: Always
          ports:
            - containerPort: 80
