k8s/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hotel-database
  namespace: hotel-app
spec:
  serviceName: hotel-database
  replicas: 1
  selector:
    matchLabels:
      app: hotel-database
  template:
    metadata:
      labels:
        app: hotel-database
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
