k8s/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-app
  namespace: hotel-app
spec:
  selector:
    app: hotel-app
  ports:
    - port: 80
      targetPort: 80
