k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-database
  namespace: hotel-app
spec:
  clusterIP: None
  selector:
    app: hotel-database
  ports:
    - port: 3306
