k8s/pma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: hotel-app
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 80
      targetPort: 80
